# industrial-anomaly-detection

./: .gitignore  README.md  pyproject.toml
scripts/: run_autoencoder.py  run_feature_knn.py
src/mvtec_ad/: __init__.py  cli.py  data.py  evaluation.py  metrics.py  visualization.py
src/mvtec_ad/models/: __init__.py  autoencoder.py  feature_knn.py  patchcore.py
src/mvtec_transistor_anomaly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_metrics.py
