[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvtec-transistor-anomaly"
version = "0.1.0"
description = "Production-style PyTorch and scikit-learn anomaly detection pipelines for MVTec AD Transistor."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pillow>=10.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
